--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "version": "2.0.0",
   "homepage": "https://github.com/visionmedia/debug",
   "authors": [
-    "Piotr Mionskowski <piotr.mionskowski@gmail.com>"
+    "TJ Holowaychuk <tj@vision-media.ca>"
   ],
   "description": "visionmedia/debug",
   "moduleType": [
